# genr

./: .gitignore  Cargo.toml  README.md
src/: garr.rs  gen.rs  generational.rs  gvec.rs  lib.rs  main.rs  prelude.rs
