[package]
name = "genr"
version = "0.1.0"
edition = "2021"
description = "A generational container implementation for rust."
readme = "README.md"
repository = "https://github.com/m-xavier/genr"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
